fix notes with overflow, truncate to ellipses in the rare case where one word overflows the note divs visible area.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@5603 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -22,6 +22,8 @@
 
 	div {
 		margin-left: 22px;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	img {
 		float: left;
